/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package TestMethod;

/**
 *
 * @author HP
 */
public class Circle extends Shape {
    int i = 7;
    int j = 8;

    void draw() {
        System.out.println("Draw Circle ");
    }

    void erase() {
        System.out.println("Erase Circle ");
    }

}
